package Classes.Model.Conta;

import Classes.Exceptions.ContaInativaException;
import Classes.Exceptions.LimiteInsuficienteException;
import Classes.Exceptions.SaldoInsuficienteException;
import Classes.Model.Operacoes.Cartao;
import Classes.Model.Operacoes.Status;
import Classes.Model.Operacoes.Transacao;

import java.time.LocalDate;
import java.time.LocalTime;
import java.time.YearMonth;
import java.time.format.DateTimeFormatter;

public class ContaPoupanca extends Conta {
    private static final double taxaRendimento = 0.005;

    public ContaPoupanca(String numeroConta, String agencia, double saldo, String tipoConta) {
        super(numeroConta, agencia, saldo, tipoConta);
    }

    public void aplicarRendimento() {
        LocalDate dataHoje = LocalDate.now();
        LocalTime horaAgora = LocalTime.now();
        YearMonth mesAtual = YearMonth.now();

        double valorRendimento = this.saldo * taxaRendimento;
        this.saldo += valorRendimento;

        String dataAtual = dataHoje.format(DateTimeFormatter.ofPattern("dd/MM/yyyy"));
        String horaAtual = horaAgora.format(DateTimeFormatter.ofPattern("HH:mm:ss"));

        Transacao transacaoRendimento = new Transacao(
                dataAtual,
                horaAtual,
                valorRendimento,
                "Rendimento Poupança",
                "ENTRADA",
                "RENDIMENTO",
                "CONCLUIDO",
                null,
                this
        );

        this.extrato.add(transacaoRendimento);
    }

    @Override
    public boolean realizarTransacao(double valor, String metodoPagamento, Cartao cartaoEscolhido, String categoria, Conta destino)
            throws ContaInativaException, SaldoInsuficienteException, LimiteInsuficienteException {

        if (this.statusConta != Status.ATIVO) {throw new ContaInativaException("Transação recusada: Sua conta poupança não está ativa.");}
        if (destino != null && destino.statusConta != Status.ATIVO) {throw new ContaInativaException("Transação recusada: A conta de destino não está ativa.");}
        if (destino == null) {throw new IllegalArgumentException("Conta de Destino não existe");}

        if (metodoPagamento.equalsIgnoreCase("PIX")) {
            if (this.saldo < valor) {
                throw new SaldoInsuficienteException("Saldo insuficiente na Conta Poupança para realizar o PIX.");
            }
            this.saldo -= valor;
            destino.saldo += valor;


        } else if (metodoPagamento.equalsIgnoreCase("DEBITO")) {
            if (cartaoEscolhido == null) {throw new IllegalArgumentException("Transação recusada: É necessário informar o cartão para a função Débito.");}
            if (cartaoEscolhido.getEstaBloqueado()) {throw new LimiteInsuficienteException("Transação recusada: O cartão informado está bloqueado.");}
            if (!cartaoEscolhido.getTipoCartao().equalsIgnoreCase("DEBITO") && !cartaoEscolhido.getTipoCartao().equalsIgnoreCase("AMBOS")) {
                throw new IllegalArgumentException("Transação recusada: Este cartão não possui a função Débito.");
            }

            if (this.saldo < valor) {
                throw new SaldoInsuficienteException("Saldo insuficiente na Conta Poupança para realizar o Débito.");
            }
            this.saldo -= valor;
            destino.saldo += valor;


        } else if (metodoPagamento.equalsIgnoreCase("CREDITO")) {
            throw new IllegalArgumentException("Transação recusada: Conta Poupança não possui função Crédito disponível.");

        } else {
            throw new IllegalArgumentException("Método de pagamento inválido para poupança: " + metodoPagamento);
        }

        LocalDate dataHoje = LocalDate.now();
        DateTimeFormatter formatadorData = DateTimeFormatter.ofPattern("dd/MM/yyyy");
        String dataAtual = dataHoje.format(formatadorData);

        LocalTime horaAgora = LocalTime.now();
        DateTimeFormatter formatadorHora = DateTimeFormatter.ofPattern("HH:mm:ss");
        String horaAtual = horaAgora.format(formatadorHora);

        Transacao transacao = new Transacao(
                dataAtual,
                horaAtual,
                valor,
                categoria,
                "SAÍDA",
                metodoPagamento,
                "CONCLUIDO",
                this,
                destino
        );

        this.extrato.add(transacao);
        Transacao transacaoEntrada = new Transacao(dataAtual, horaAtual, valor, categoria, "ENTRADA", metodoPagamento, "CONCLUIDO", destino, this);
        destino.extrato.add(transacaoEntrada);

        return true;
    }

    @Override
    public String visualizarDadosConta() {
        return super.visualizarDadosConta() +
                String.format("Taxa de Rendimento: %.2f%%\n", this.taxaRendimento * 100);
    }
}