@startuml Módulo Contas (Visão Expandida)
skinparam classAttributeIconSize 0
left to right direction

package "Módulo Contas" #FEF9E7 {
    abstract class Conta {
        # extrato : ArrayList<Transacao>
        # cartoes : ArrayList<Cartao>
        # listaInvestimentos : ArrayList<Investimento>
        - {static} codigoSequencial : int = 0
        # id : int
        # numeroConta : String
        # agencia : String
        # saldo : double
        # tipoConta : String
        # statusConta : Status
        --
        ~ Conta(numeroConta : String, agencia : String, saldo : double, tipoConta : String)
        + {abstract} realizarTransacao(valor : double, metodoPagamento : String, cartaoEscolhido : Cartao, category : String, destino : Conta) : boolean
        + visualizarExtrato(fluxo : String, metodoPagamento : String, categoria : String, diasPeriodo : Integer, dataEspecifica : String) : ArrayList<Transacao>
        + visualizarDadosConta() : String
        + getSaldo() : double
        + getAgencia() : String
        + getNumeroConta() : String
        + setSaldo(saldo : double) : void
        + getCartoes() : ArrayList<Cartao>
        + getTipoConta() : String
        + getStatus() : Status
        + setStatus(statusConta : Status) : void
        + getListaInvestimentos() : ArrayList<Investimento>
        + getExtrato() : ArrayList<Transacao>
        + setId(id: int): void 
        + getId(): int
    }

    class ContaCorrente {
        - limiteChequeEspecial : double
        --
        + ContaCorrente(numeroConta : String, agencia : String, saldo : double, tipoConta : String, limiteChequeEspecial : double)
        + realizarTransacao(valor : double, metodoPagamento : String, cartaoEscolhido : Cartao, categoria : String, destino : Conta) : boolean
        + visualizarDadosConta() : String 
        + getLimiteChequeEspecial() : double
    }

    class ContaPoupanca {
        - taxaRendimento : double
        --
        + ContaPoupanca(numeroConta : String, agencia : String, saldo : double, tipoConta : String)
        + aplicarRendimento() : void
        + realizarTransacao(valor : double, metodoPagamento : String, cartaoEscolhido : Cartao, categoria : String, destino : Conta) : boolean <<override>>
        + visualizarDadosConta() : String
    }

    class ContaKids {
        - cpfResponsavel : String
        - limiteMensal : double
        - totalGastoNoMes : double
        --
        + ContaKids(numeroConta : String, agencia : String, saldo : double, tipoConta : String, cpfResponsavel : String, limiteMensal : double)
        + resetarMes() : void
        + realizarTransacao(valor : double, metodoPagamento : String, cartaoEscolhido : Cartao, categoria : String, destino : Conta) : boolean <<override>>
        + visualizarDadosConta() : String
        + getCpfResponsavel() : String
        + getLimiteMensal() : double
    }

    class ContaInvestimento {
        - titularCPF : String
        --
        + ContaInvestimento(numeroConta : String, agencia : String, saldo : double, tipoConta : String, titularCPF : String)
        + realizarTransacao(valor : double, metodoPagamento : String, cartaoEscolhido : Cartao, categoria : String, destino : Conta) : boolean <<override>>
        + visualizarDadosConta() : String 
        + getTitularCPF() : String
    }
    
    ContaCorrente -up-|> Conta
    ContaPoupanca -up-|> Conta
    ContaKids -up-|> Conta
    ContaInvestimento -up-|> Conta
}

package "Módulo Operações" #E8F8F5 {
    class Cartao
    class Transacao
    class Investimento
    enum Status <<enum>>
}

Conta "1" *-up- "0..*" Cartao 
Conta "1" *-up- "0..*" Transacao
Conta "1" -up-> "0..*" Investimento : movimenta >
Conta -up-> Status : possui
@enduml